--- a/5.0/Makefile
+++ b/5.0/Makefile
@@ -4,13 +4,13 @@ CFLAGS = -g3 -Wall
 
 OFLAGS = -O0
 
-all: clean lookup
+all: clean rdc
 
-lookup: main.c
+rdc: main.c
 	$(CC) $(CFLAGS) $(OFLAGS) $^ -o $@
 
 opti: main.c
 	$(CC) $(CFLAGS) -Ofast $^ -o $@
 
 clean:
-	rm -Rf *~ lookup opti output.txt
+	rm -Rf *~ rdc opti output.txt
