Add function which print performance

--- a/5.1/Makefile
+++ b/5.1/Makefile
@@ -13,13 +13,10 @@ opti: main.c
 	$(CC) $(CFLAGS) -Ofast $^ -o $@
 
 tests: rdc
-	@ echo "Size = 5" && ./rdc 5 out5
-	@ echo ""
-	@ echo "Size = 10" && ./rdc 10 out10
-	@ echo ""
-	@ echo "Size = 50" && ./rdc 50 out50
-	@ echo ""
-	@ echo "Size = 100" && ./rdc 100 out100
+	@ ./rdc 5 out5
+	@ ./rdc 10 out10
+	@ ./rdc 50 out50
+	@ ./rdc 100 out100
 
 clean:
 	rm -Rf *~ rdc out*
