rename structure, change perf display

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,19 +4,19 @@ CFLAGS = -g3 -Wall
 
 OFLAGS = -O0
 
-all: clean rdc
+all: clean rdp
 
-rdc: main.c
+rdp: main.c
 	$(CC) $(CFLAGS) $(OFLAGS) $^ -o $@
 
 opti: main.c
 	$(CC) $(CFLAGS) -Ofast $^ -o $@
 
-tests: rdc
-	@ ./rdc 5 out5
-	@ ./rdc 10 out10
-	@ ./rdc 50 out50
-	@ ./rdc 100 out100
+tests: rdp
+	@ ./$^ 5 out5
+	@ ./$^ 10 out10
+	@ ./$^ 50 out50
+	@ ./$^ 100 out100
 
 clean:
-	rm -Rf *~ rdc out*
+	rm -Rf *~ rdp out*
